Added requirement.txt and other files

--- a/form_to_tale.ipynb
+++ b/form_to_tale.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "e875d5ab",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "id": "d409840f",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "id": "23b986e6",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "201"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "id": "067e176b",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "id": "9db5db29",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        "4                0.001109      47.619048            974.6122  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
+   "id": "f28686ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.to_csv('imqcam.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "id": "86450a9f",
    "metadata": {},
    "outputs": [
@@ -376,7 +386,7 @@
        "200                    -1.0      53.726566         1044.798526  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,12 +397,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "id": "c1669737",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(145, 19)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.rename(columns={'Elongation_Percent': 'Elongation',\"Yield_Strength_MPa\": \"Yield_Str\", \"DOE_Code\": \"DOE_ID\", \"DOE_ID\" : \"DOE_Code\"},inplace=True)"
+    "df.rename(columns={'Elongation_Percent': 'Elongation',\"Yield_Strength_MPa\": \"Yield_Str\", \"DOE_Code\": \"DOE_ID\", \"DOE_ID\" : \"DOE_Code\"},inplace=True)\n",
+    "df = df[(df.Elongation>0) & (df.Yield_Str>910)]\n",
+    "df.shape\n",
+    "#df.Total_Porosity_Percent.value_counts()"
    ]
   },
   {
@@ -404,7 +428,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fe30c4dc21d46f4962332380f92edd1",
+       "model_id": "56a6f361b9bf403fadc916fb20604919",
        "version_major": 2,
        "version_minor": 0
       },
@@ -490,7 +514,7 @@
     "\n",
     "        plt.xlabel(x)\n",
     "        plt.ylabel(y)\n",
-    "        plt.ylim(800,1200)\n",
+    "        #plt.ylim(800,1200)\n",
     "        plt.title(f'{x} vs {y} by {hue}')\n",
     "        plt.legend(title=hue, bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "        plt.tight_layout()\n",
